pari_bindings/libpari/src/headers/paristio.h

/* Copyright (C) 2000  The PARI group.

This file is part of the PARI/GP package.

PARI/GP is free software; you can redistribute it and/or modify it under the
terms of the GNU General Public License as published by the Free Software
Foundation; either version 2 of the License, or (at your option) any later
version. It is distributed in the hope that it will be useful, but WITHOUT
ANY WARRANTY WHATSOEVER.

Check the License for details. You should have received a copy of it, along
with the package; see the file 'COPYING'. If not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA. */

/* This file contains memory and I/O management definitions       */

typedef struct {
  long s, us;
} pari_timer;
typedef struct pari_str {
  char *string; /* start of the output buffer */
  char *end;    /* end of the output buffer */
  char *cur;   /* current writing place in the output buffer */
  size_t size; /* buffer size */
  int use_stack; /* use stack_malloc instead of malloc ? */
} pari_str;
typedef unsigned char *byteptr;
typedef ulong pari_sp;
struct pari_sieve
{
  ulong start, end, maxpos;
  ulong c, q;
  unsigned char* sieve;
};
/* iterator over primes */
typedef struct {
  int strategy; /* 1 to 4 */
  GEN bb; /* iterate through primes <= bb */
  ulong c, q; /* congruent to c (mod q) */

  /* strategy 1: private prime table */
  byteptr d; /* diffptr + n */
  ulong p; /* current p = n-th prime */
  ulong b; /* min(bb, ULONG_MAX) */

  /* strategy 2: sieve, use p */
  struct pari_sieve *psieve;
  unsigned char *sieve, *isieve;
  ulong cache[9]; /* look-ahead primes already computed */
  ulong chunk; /* # of odd integers in sieve */
  ulong a, end, sieveb; /* [a,end] interval currently being sieved,
                         * end <= sieveb = min(bb, maxprime^2, ULONG_MAX) */
  ulong pos, maxpos; /* current cell and max cell */

  /* strategy 3: unextprime, use p */

  /* strategy 4: nextprime */
  GEN pp;
} forprime_t;
typedef struct {
  int first;
  GEN b, n, p;
  forprime_t T;
} forcomposite_t;
typedef struct forvec_t {
  long first;
  GEN *a, *m, *M; /* current n-uplet, minima, Maxima */
  long n; /* length */
  GEN (*next)(struct forvec_t *);
} forvec_t;
/* Iterate over partitions */
typedef struct
{
  long k;
  long amax, amin, nmin, nmax, strip;
  GEN v;
} forpart_t;
/* Iterate over permutations */
typedef struct
{
  long k, first;
  GEN v;
} forperm_t;
/* Iterate over subsets */
typedef struct
{
  long n, k, all, first;
  GEN v;
} forsubset_t;
/* Plot engines */
typedef struct PARI_plot {
  void (*draw)(struct PARI_plot *T, GEN w, GEN x, GEN y);
  long width;
  long height;
  long hunit;
  long vunit;
  long fwidth;
  long fheight;
  long dwidth;
  long dheight;
} PARI_plot;
/* binary I/O */
typedef struct GENbin {
  size_t len; /* gsizeword(x) */
  GEN x; /* binary copy of x */
  GEN base; /* base address of p->x */
  void (*rebase)(GEN,long);
} GENbin;
struct pari_mainstack
{
  pari_sp top, bot, vbot;
  size_t size, rsize, vsize, memused;
};
typedef struct entree {
  const char *name;
  ulong valence;
  void *value;
  long menu;
  const char *code;
  const char *help;
  void *pvalue;
  long arity;
  ulong hash;
  struct entree *next;
} entree;
struct pari_parsestate
{
  long node;
  int once;
  long discarded;
  const char *lex_start;
  GEN lasterror;
};
struct pari_compilestate
{
  long opcode, operand, accesslex, data, localvars, frames, dbginfo;
  long offset, nblex;
  const char *dbgstart;
};
struct pari_mtstate
{
  long pending_threads;
  long is_thread;
  long trace_level;
};
struct pari_evalstate
{
  pari_sp avma;
  long sp;
  long rp;
  long var;
  long lvars;
  long locks;
  long prec;
  long trace;
  struct pari_mtstate mt;
  struct pari_compilestate comp;
};
struct pari_varstate
{
  long nvar, max_avail, min_priority, max_priority;
};
extern THREAD struct pari_mainstack *pari_mainstack;
struct pari_global_state
{
  long debugvar;
  long bitprec;
  GEN primetab;
  GEN seadata;
  long *varpriority;
  struct pari_varstate varstate;
};
struct pari_thread
{
  struct pari_mainstack st;
  struct pari_global_state gs;
  GEN data;
};
struct mt_state
{
  GEN worker;
  GEN pending;
  long workid;
};
struct pari_mt
{
  struct mt_state mt;
  GEN (*get)(struct mt_state *mt, long *workid, long *pending);
  void (*submit)(struct mt_state *mt, long workid, GEN work);
  void (*end)(void);
};
struct parfor_iter
{
  long pending;
  GEN worker;
  struct pari_mt pt;
};
typedef struct
{
  GEN a, b;
  struct parfor_iter iter;
} parfor_t;
typedef struct
{
  GEN x, W;
  long i, l;
  struct parfor_iter iter;
} parforeach_t;
typedef struct
{
  GEN v;
  forprime_t forprime;
  struct parfor_iter iter;
} parforprime_t;
typedef struct
{
  GEN v;
  forvec_t forvec;
  struct parfor_iter iter;
} parforvec_t;
/* hashtables */
typedef struct hashentry {
  void *key, *val;
  ulong hash; /* hash(key) */
  struct hashentry *next;
} hashentry;
typedef struct hashtable {
  ulong len; /* table length */
  hashentry **table; /* the table */
  ulong nb, maxnb; /* number of entries stored and max nb before enlarging */
  ulong pindex; /* prime index */
  ulong (*hash) (void *k); /* hash function */
  int (*eq) (void *k1, void *k2); /* equality test */
  int use_stack; /* use stack_malloc instead of malloc ? */
} hashtable;
typedef struct {
  char *PATH;
  char **dirs;
} gp_path; /* path */
typedef struct {
  char format; /* e,f,g */
  long sigd;   /* -1 (all) or number of significant digits printed */
  int sp;      /* 0 = suppress whitespace from output */
  int prettyp; /* output style: raw, prettyprint, etc */
  int TeXstyle;
} pariout_t; /* output format */
enum pari_logstyles {
    logstyle_none,        /* 0 */
    logstyle_plain,        /* 1 */
    logstyle_color,        /* 2 */
    logstyle_TeX         /* 3 */
};