pari_bindings/libpari/src/headers/parinf.h

typedef struct {
  GEN T, dT; /* defining polynomial (monic ZX), disc(T) */
  GEN T0; /* original defining polynomial (ZX) */
  GEN unscale; /* T = C*T0(x / unscale), rational */
  GEN dK; /* disc(K) */
  GEN index; /* [O_K : Z[X]/(T)] */
  GEN basis;  /* Z-basis of O_K (t_VEC of t_POL) */

  long r1; /* number of real places of K */
  GEN basden; /* [nums(bas), dens(bas)] */
  GEN dTP, dTE; /* (possibly partial) factorization of dT, primes / exponents */
  GEN dKP, dKE; /* (possibly partial) factorization of dK, primes / exponents */
  long certify; /* must we certify at the end */
} nfmaxord_t;
/* qfr3 / qfr5 */
struct qfr_data { GEN D, sqrtD, isqrtD; };